--- a/_posts/2024-03-04-carla-0.9.15-consumption.md
+++ b/_posts/2024-03-04-carla-0.9.15-consumption.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      A Chaotic Guide to Using Docker for Robotics Research - Part IV
-subtitle:   TL;DR, Just Use Docker Compose
+title:      Carla 0.9.15 Consumption
+subtitle:   Combining Carla and PHA
 date:       2024-03-04
 author:     Shrijal Pradhan
 ext-img: "https://oneclick-cloud.com/wp-content/uploads/2023/08/Bigstock_-139961875-Docker-Emblem.-A-Blue-Whale-With-Several-Containers.-e1574090673987-1.jpg"
@@ -15,9 +15,10 @@ tags:
     - ros
 ---
 
-## Introduction to Compose
-- `/dev` files can be individually assigned an ID and sent to docker
-- No comment on RVIZ
+## Introduction
+
+- Upgrade Carla ROS Bridge to Ubuntu 22.04
+- Provide a sample of how to use the bridge with PHA
 
 ## White Paper Criticism
 - No proper alternative given
