Bibliography for Chaotic

--- a/_posts/2024-03-04-carla-0.9.15-consumption.md
+++ b/_posts/2024-03-04-carla-0.9.15-consumption.md
@@ -38,7 +38,7 @@ tags:
 
 This article creates a base platform for the [PHA Project] where different modules of the automated driving stack could be build upon.
 
-## References
+## Bibliography
 
 - [Docker ROS Guide]
 - [Docker ROS 2 Guide]
