Carla ROS Bridge 0.9.15 Changes

--- a/_posts/2024-03-04-carla-0.9.15-consumption.md
+++ b/_posts/2024-03-04-carla-0.9.15-consumption.md
@@ -17,67 +17,45 @@ tags:
 
 ## Introduction
 
-- Upgrade Carla ROS Bridge to Ubuntu 22.04
-- Provide a sample of how to use the bridge with PHA
+This article documents the steps taken to upgrade [Carla ROS Bridge] to be compabible with [Carla Simulator v0.9.15.2] and with Ubuntu 22.04. The changes are very simple and no functional improvements are applied.
 
-## White Paper Criticism
-- No proper alternative given
-- Kinda rejected by the community
-- Why not create non-sudo (and sudo) users in docker with their own passwords?
-- The white paper does not provide proper counter arguments
-- Not enough references or extensive examples of what they consider breaches
+## Patch and work
 
-## Advantages
-- Different research institues have different installation methods
-- Different projects have different demands
+The patch work is very (very) simple. In the [Carla ROS Bridge] simply make this change in `pcl_recorder/CMakeLists.txt` in Line `69`.
 
-## Disadvantages
-- Opened Access
+```cmake
+ament_target_dependencies(${PROJECT_NAME}_node rclcpp sensor_msgs
+                            pcl_conversions tf2 tf2_ros tf2_eigen)
+```
+
+That's it really. The `tf2_eigen` must be additionally specified as a dependency to build `pcl_recorder` and we are good to go for the package to be built on Ubuntu 22.04 with `ROS Humble`.
+
+Also don't for get to change the `CARLA_VERSION` in `carla_ros_bridge/src/carla_ros_bridge/CARLA_VERSION`.
+
+```bash
+0.9.15
+```
+
+## Update the Dockerfile
+
+
+
+## the PHA Way
+
+
 
 ## Conclusion
 
-This article creates a base platform for the [PHA Project] where different modules of the automated driving stack could be build upon.
+This article creates a base simulation platform for the [PHA Project] using Carla with Ubuntu 22.04.
 
 ## Bibliography
 
-- [Docker ROS Guide]
-- [Docker ROS 2 Guide]
-- [Docker run]
-- [Ubuntu White Paper]
 - [PHA 22 Mini]
 - [PHA Docker]
-- [Using GPU in Docker]
-- [Container GUI]
-- [Docker GUI]
-- [X11 Forwarding]
-- [ROS Docker GUI]
-- [Specialized Docker]
-- [Container Runtime]
-- [Gemini]
-- [Why GPUs]
-- [CuDNN]
-- [Realsense SDK Guide]
-- [Shared Memory]
 
-[Docker ROS Guide]: https://roboticseabass.com/2021/04/21/docker-and-ros/
-[Docker ROS 2 Guide]: https://roboticseabass.com/2023/07/09/updated-guide-docker-and-ros2/
-[Docker run]: https://docs.docker.com/reference/cli/docker/container/run/
-[Docker network]: https://docs.docker.com/reference/cli/docker/network/
-[Ubuntu White Paper]: https://ubuntu.com/engage/dockerandros
+[Carla ROS Bridge]: https://github.com/carla-simulator/ros-bridge
+[Carla Simulator v0.9.15.2]: https://github.com/carla-simulator/carla/tree/0.9.15.2
 [PHA Project]: {{site.url}}/pha-project/
 [PHA 22 Mini]: https://hub.docker.com/r/phaenvs/pha-22-mini
 [PHA Docker]: https://github.com/pradhanshrijal/pha_docker_files 
 [Easy Guide to Installing Docker]: {{site.url}}/blog/easy-guide-to-installing-docker/
-[Using GPU in Docker]: https://blog.roboflow.com/use-the-gpu-in-docker/
-[Container GUI]: https://leimao.github.io/blog/Docker-Container-GUI-Display/
-[Docker GUI]: https://linuxmeerkat.wordpress.com/2014/10/17/running-a-gui-application-in-a-docker-container/
-[X11 Forwarding]: https://forums.docker.com/t/x11-forwarding-with-v-on-docker-run-not-working/17708
-[ROS Docker GUI]: https://wiki.ros.org/docker/Tutorials/GUI
-[Specialized Docker]: https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/latest/docker-specialized.html
-[Container Runtime]: https://developer.nvidia.com/container-runtime
-[Gemini]: https://gemini.google.com/
-[Why GPUs]: https://blogs.nvidia.com/blog/why-gpus-are-great-for-ai/
-[CuDNN]: https://developer.nvidia.com/cudnn
-[CUDA Gitlab]: https://gitlab.com/nvidia/container-images/cuda
-[Realsense SDK Guide]: https://dev.intelrealsense.com/docs/compiling-librealsense-for-linux-ubuntu-guide
-[Shared Memory]: https://www.cyberciti.biz/tips/what-is-devshm-and-its-practical-usage.html
