Finalized Carla 0.9.15 article

--- a/_posts/2024-03-04-carla-0.9.15-consumption.md
+++ b/_posts/2024-03-04-carla-0.9.15-consumption.md
@@ -107,14 +107,72 @@ cd /home/${USER}
 mkdir schreibtisch
 cd schreibtisch
 git clone https://github.com/pradhanshrijal/pha_docker_files
+cd pha_docker_files
 ```
 
 #### Run Sample Container
 
-We will use the [PHA 22 Mini] image to show a sample installation. This image does not contain all the dependencies required by the ros-bridge so there will be some installations of dependencies associated with the container, the package itself will be installed in the [SSI]. The storage of this space is associated with the host and not the container itself.
+We will use the [PHA 22 Mini] image to show a sample installation. This image does not contain all the dependencies required by the ros-bridge so there will be some installations of dependencies associated with the container, the package itself will be installed in the [SSI]. The storage of this space is associated with the host and not the container itself. First setup the Container
 
 ```bash
+./docker_scripts/run-compose.sh -b docker_scripts/docker-compose-user-mini.yaml \ 
+            -e docker_scripts/compose-file-user.env
+```
 
+#### Exec PHA Container
+
+Enter the container with:
+
+```bash
+./docker_scripts/exec-cont.sh -c pha-22-mini-${USER}
+```
+
+> **_NOTE:_**
+> Use tmux for easy development inside docker.
+
+#### Install Carla ROS Bridge
+
+Now we can install the package in the [SSI] which in this case is located in `/home/${USER}/docker_share` inside the docker container. First install the dependencies. Then navigate to the folder, download and install.
+
+```bash
+python3 -m pip install carla==0.9.15
+python3 -m pip install pygame
+sudo apt install ros-humble-derived-object-msgs -y
+python3 -m pip install numpy==1.23.1
+
+cd /home/${USER}/docker_share/git_pkgs
+mkdir -p test_ws/src
+cd test_ws/src
+git clone --recurse-submodules https://github.com/pradhanshrijal/ros-bridge -b feature/u22-0.9.15
+cd ..
+source /opt/ros/humble/setup.bash
+rosdep install -y --from-paths src --ignore-src --rosdistro humble # $ROS_DISTRO
+colcon build --symlink-install
+```
+
+The installations can also be done with a script:
+
+```bash
+source /home/${USER}/docker_share/scripts/install/install_carla_bridge.sh ${USER} humble 0.9.15
+```
+
+All that is left is to source the ROS packages so the system can find them. Write it into the `.bashrc` to automate it.
+
+```bash
+echo "source /opt/ros/humble/setup.bash" >> /home/${USER}/.bashrc
+echo "source /home/${USER}/docker_share/git_pkgs/test_ws/install/setup.bash" >> /home/${USER}/.bashrc
+```
+
+That's it folks, the installations are done. With this method it is possible to install other additions with relative ease and not much extra storage space compromise. It is also possible to use several ROS workspaces in a multitude of docker containers with relative ease. The combinations are expansive and still easy. All you have to do is source the right workspace into the right container. This can be done even easier with containers, link will be provided here when it is available in the future.
+
+## Launch Carla Bridge
+
+Make sure Carla Simulator Server is running in another container. See [Run Carla Simulator](#run-carla-simulator).
+
+Now to launch as stated in [Carla ROS 2 Install]:
+
+```bash
+ros2 launch carla_ros_bridge carla_ros_bridge_with_example_ego_vehicle.launch.py
 ```
 
 ## Conclusion
@@ -126,15 +184,19 @@ This article creates a base simulation platform for the [PHA Project] using Carl
 - [Carla ROS Bridge]
 - [Carla Simulator v0.9.15.2]
 - [Carla Server]
+- [Carla ROS 2 Install]
+- [Carla ROS - Tf Eigen]
 - [ROS Humble]
 - [PHA 22 Mini]
 - [PHA Docker]
 - [Commit Dockerfile Humble]
+- [rosdep]
 
 [Carla ROS Bridge]: https://github.com/carla-simulator/ros-bridge
 [Carla ROS Bridge - Humble]: https://github.com/pradhanshrijal/ros-bridge/tree/feature/u22-0.9.15 
 [Carla Simulator v0.9.15.2]: https://github.com/carla-simulator/carla/tree/0.9.15.2
 [Carla Server]: https://carla.readthedocs.io/en/stable/carla_server/
+[Carla ROS 2 Install]: https://carla.readthedocs.io/projects/ros-bridge/en/latest/ros_installation_ros2/
 [Carla ROS - Tf Eigen]: https://github.com/carla-simulator/ros-bridge/issues/691#issuecomment-1632398151
 [ROS Humble]: https://docs.ros.org/en/humble/index.html
 [PHA Project]: {{site.url}}/pha-project/
