Finalize Carla Articles with Images

--- a/_posts/2024-03-04-carla-0.9.15-consumption.md
+++ b/_posts/2024-03-04-carla-0.9.15-consumption.md
@@ -4,7 +4,7 @@ title:      Carla 0.9.15 Consumption
 subtitle:   Combining Carla and PHA
 date:       2024-03-04
 author:     Shrijal Pradhan
-ext-img: "https://oneclick-cloud.com/wp-content/uploads/2023/08/Bigstock_-139961875-Docker-Emblem.-A-Blue-Whale-With-Several-Containers.-e1574090673987-1.jpg"
+ext-img: "https://drscdn.500px.org/photo/1089310428/q%3D80_m%3D600/v2?sig=5371ef098b2cc4207882a83bb887dbbea964f01124cad67b91b861815dea0139"
 catalog: true
 categories: blog
 permalink: /:categories/:title/
@@ -183,7 +183,7 @@ ros2 launch carla_ros_bridge carla_ros_bridge_with_example_ego_vehicle.launch.py
 ---
 ## Conclusion
 
-This article creates a base simulation platform for the [PHA Project] using Carla with Ubuntu 22.04.
+This article creates a base simulation platform for the [PHA Project] using Carla with Ubuntu 22.04. It also provides an example on how to install ROS packages into a ready-made container without bloating it's size.
 
 ---
 ## Bibliography
